--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'net.dv8tion:JDA:5.0.0-beta.3'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
